// Serialización/deserialización JSON
package network;

public class JSONParser {
    
}
