// Acepta conexiones entrantes (ServerSocket)

package core;

public class Server {
    
}
