// Administra el pool de hilos (ExecutorService)
package core;

public class ThreadPoolManager {
    
}
