// Conexión a SQLite/MySQL y consultas básicas
package database;

public class DatabaseManager {
    
}
