// Solicitudes de amistad
package database;

public class FriendshipDAO {
    
}
