// CRUD de mensajes (persistentes y pendientes)
package database;

public class MessageDAO {
    
}
