// Solicitudes y aceptación de amistad
package logic;

public class FriendshipManager {
    
}
