// Creación, eliminación, invitación a grupos
package logic;

public class GroupManager {
    
}
