// Lógica de envío de mensajes (estados, pendientes, temporales)
package logic;

public class MessageManager {
    
}
