// Autenticación, registro, cambio de contraseña
package logic;

public class UserManager {
    
}
