// Compresión/descompresión LZ77
package network;

public class LZ77Compressor {
    
}
