// Constantes de comandos (LOGIN, MSG, etc.)
// Opcional. Lo puedes mantener en Main.java
package network;

public class Protocol {
    
}
