// Carga IP, puerto, DB config
package utils;

public class ConfigLoader {
    
}
