// Registro en consola (visor del servidor)
// Opcional. Lo puedes mantener en Main.java
package utils;

public class Logger {
    
}
